[package]
name = "googleads-rs"
version = "0.4.1"
authors = ["Michael S. Huang <mhuang74@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/mhuang74/googleads-rs"
documentation = ""
description = """
A gRPC client library for Google Ads API, generated automatically from the API definition files.
"""
keywords = ["gapi", "grpc", "googleads"]
readme = "README.md"

[lib]

[dependencies]
tonic = { version = "0.7.2", features = ["tls", "tls-roots"] }
prost = "0.10.4"
prost-types = "0.10.1"

[build-dependencies]
tonic-build = "0.7.2"
walkdir = "2"

[dev-dependencies]
version-sync = "0.9"

[badges.maintenance]
status = "actively-developed"

