[package]
name = "googleads-rs"
version = "0.9.1"
authors = ["Michael S. Huang <mhuang74@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/mhuang74/googleads-rs"
description = """
A gRPC client library for Google Ads API, generated automatically from the API definition files.
"""
keywords = ["gapi", "grpc", "googleads"]
readme = "README.md"

[lib]

[dependencies]
tonic = { version = "0.8.0", features = ["tls", "tls-roots"] }
prost = "0.11.9"
prost-types = "0.11.9"

[build-dependencies]
tonic-build = "0.8.0"
walkdir = "2"
build-print = "0.1"

[dev-dependencies]
version-sync = "0.9"

[badges.maintenance]
status = "actively-developed"

