[package]
name = "googleads-rs"
version = "0.11.1"
authors = ["Michael S. Huang <mhuang74@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/mhuang74/googleads-rs"
description = """
A gRPC client library for Google Ads API, generated automatically from the API definition files.
"""
keywords = ["gapi", "grpc", "googleads"]
readme = "README.md"

[lib]

[dependencies]
tonic = { version = "0.14.2", features = ["tls-ring", "tls-native-roots"] }
prost = "0.11.9"
prost-types = "0.11.9"

[build-dependencies]
tonic-build = "0.8.0"
prost-build = "0.14"
walkdir = "2"
build-print = "1.0"

[dev-dependencies]
version-sync = "0.9"
tokio = { version = "1.39", features = ["full", "test-util", "macros"] }
tokio-stream = "0.1"
tower = "0.5"
futures = "0.3.31"
proptest = "1.0"

[badges.maintenance]
status = "actively-developed"

